# cortex-ar

./: Cargo.toml  README.md  tests.sh
.cargo/: config.toml
.github/workflows/: build.yml
arm-targets/: CHANGELOG.md  Cargo.toml  README.md
cortex-a-rt/: CHANGELOG.md  Cargo.toml  README.md  link.x
cortex-a-rt/src/: lib.rs
cortex-ar/: CHANGELOG.md  Cargo.toml  README.md
cortex-ar-rt-macros/: CHANGELOG.md  Cargo.toml  README.md
cortex-ar-rt-macros/src/: lib.rs
cortex-ar/src/: asm.rs  critical_section.rs  lib.rs  pmsav8.rs
cortex-ar/src/generic_timer/: el0.rs  el1.rs  el2.rs  mod.rs
cortex-ar/src/register/: dfar.rs  dfsr.rs  ifar.rs  ifsr.rs
cortex-r-rt/: CHANGELOG.md  Cargo.toml  README.md  link.x
cortex-r-rt/src/: lib.rs
examples/mps3-an536/: Cargo.toml  README.md
examples/mps3-an536/reference/: abt-exception-a32-armv8r-none-eabihf.out  abt-exception-armv8r-none-eabihf.out  abt-exception-t32-armv8r-none-eabihf.out  generic_timer-armv8r-none-eabihf.out  gic-armv8r-none-eabihf.out  hello-armv8r-none-eabihf.out  prefetch-exception-a32-armv8r-none-eabihf.out  prefetch-exception-t32-armv8r-none-eabihf.out  registers-armv8r-none-eabihf.out  smp_test-armv8r-none-eabihf.out  smp_test-armv8r-none-eabihf_smp2.out  svc-armv8r-none-eabihf.out  undef-exception-a32-armv8r-none-eabihf.out
examples/mps3-an536/src/: lib.rs
examples/versatileab/: Cargo.toml  README.md  memory.x
examples/versatileab/reference/: abt-exception-a32-armv7a-none-eabi.out  abt-exception-a32-armv7r-none-eabi.out  abt-exception-a32-armv7r-none-eabihf.out  abt-exception-armv7a-none-eabi.out  abt-exception-t32-armv7a-none-eabi.out  abt-exception-t32-armv7r-none-eabi.out  abt-exception-t32-armv7r-none-eabihf.out  hello-armv7a-none-eabi.out  prefetch-exception-a32-armv7a-none-eabi.out  prefetch-exception-a32-armv7r-none-eabihf.out  prefetch-exception-armv7r-none-eabihf.out  prefetch-exception-t32-armv7r-none-eabi.out  prefetch-exception-t32-armv7r-none-eabihf.out  svc-armv7r-none-eabi.out  svc-armv7r-none-eabihf.out  undef-exception-armv7r-none-eabihf.out  undef-exception-t32-armv7a-none-eabi.out  undef-exception-t32-armv7r-none-eabihf.out
examples/versatileab/src/: lib.rs
