[package]
authors = [
    "Jonathan Pallant <jonathan.pallant@ferrous-systems.com>",
    "The Embedded Devices Working Group Arm Team <arm@teams.rust-embedded.org>"
]
categories = ["development-tools::build-utils"]
description = "Compile-time feature detection for Arm processors"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "arm-targets"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-ar.git"
homepage = "https://github.com/rust-embedded/cortex-ar.git"
rust-version = "1.59"
version = "0.2.0"

[dependencies]
