[package]
authors = [
  "Robin Mueller <muellerr@irs.uni-stuttgart.de>",
  "Jonathan Pallant <jonathan.pallant@ferrous-systems.com>",
  "The Embedded Devices Working Group Arm Team <arm@teams.rust-embedded.org>"
]
description = "Run-Time macros for Arm Cortex-A and Cortex-R"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cortex-ar-rt-macros"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-ar.git"
homepage = "https://github.com/rust-embedded/cortex-ar.git"
rust-version = "1.82"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "2.0"
